--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
 
         </section>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=aGDCy21k40mxPP6Z&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        
     </main>
 
 
