--- a/index.html
+++ b/index.html
@@ -50,20 +50,24 @@
         <section class="mapa">
             <h3 class="titulo-principal">Nuestra Ubicación</h3>
             <p>Nuestra establecimiento esta ubicado en el corazón de la ciudad</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2767.604873880342!2d-74.23379390532739!3d11.1887936542222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sRodadero%20santamarta%2C%20playa%20salguero!5e0!3m2!1ses!2sco!4v1706390228525!5m2!1ses!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="mapa-contenido">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2767.604873880342!2d-74.23379390532739!3d11.1887936542222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sRodadero%20santamarta%2C%20playa%20salguero!5e0!3m2!1ses!2sco!4v1706390228525!5m2!1ses!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            
         </section>
         <section class="diferenciales">
-
             <h3 class="titulo-principal">Diferenciales</h3>
-
-            <ul>
-                <li class="items">Atención personalizada a los clientes</li>
-                <li class="items">Espacio diferenciado</li>
-                <li class="items">Localización</li>
-                <li class="items">Profesionales calificados</li>
-            </ul>
-
-            <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
+            <div class="contenido-diferenciales">
+                <ul class="lista-diferenciales">
+                    <li class="items">Atención personalizada a los clientes</li>
+                    <li class="items">Espacio diferenciado</li>
+                    <li class="items">Localización</li>
+                    <li class="items">Profesionales calificados</li>
+                    <li class="items">Puntualidad</li>
+                    <li class="items">Limpieza</li>
+                </ul><img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">
+            </div>
+            
 
         </section>
         <div class="video">
